--- a/desafios/004/estilo/style.css
+++ b/desafios/004/estilo/style.css
@@ -1,12 +1,24 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
 }
 
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 html, body{
     min-height: 100vh;
     background-color: #a9a9a9;
+    font-family: var(--fonte1);
 }
 
 header{
@@ -18,6 +30,8 @@ header{
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vh;
 }
 
 header p{
@@ -39,15 +53,23 @@ section{
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 3vh;
 }
 
 section.normal{
     background-color: #fff;
     color: #000;
 }
+
 section.imagem{
-    background-color: #000000b7;
+    background-color: #00000085;
     color: #fff;
+}
+section.imagem >p{
+    padding: 5px;
+    display: inline-block;
+    background-color: #000;
 }
 
 footer{
