--- a/desafios/007/estilo/style.css
+++ b/desafios/007/estilo/style.css
@@ -3,12 +3,14 @@
 *{
     margin: 0;
     padding: 0;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 /*Inicio*/
 
 section#barra-inicio{
     display: block;
+    width: 100vh;
     max-height: 200px;
 }
 
@@ -23,9 +25,10 @@ section#barra-inicio div >img{
 }
 
 section#barra-inicio div >img.barra-img-2{
-    display: inline-block;
-    justify-content: right;
-    align-items: right;
+    display: flex;
+    position: absolute;
+    top: 0.01%;
+    left: 97%;
 }
 
 section#barra-inicio div h1{
@@ -33,4 +36,24 @@ section#barra-inicio div h1{
     font-size: 1.2em;
     color: #ff0000;
     margin: 10px 10px 10px 10px;
+}
+
+/*Imagem de entrada*/
+
+section#section-inicio{
+    display: block;
+    margin: 0;
+    background-image: url("../imagens/london.jpg");
+    object-fit: cover;
+    max-width: 100%;
+    height: 600px;
+}
+
+div#div-inicio{
+    display: flex;
+    flex-flow: row wrap;
+}
+
+div#div-inicio div{
+    display: flex;
 }
