--- a/desafios/009/estilos/style.css
+++ b/desafios/009/estilos/style.css
@@ -4,23 +4,31 @@
     padding: 0;
 }
 
+html{
+    max-width: 100%;
+    max-height: 100%;
+    background-color: #000;
+}
+
 body{
-    max-height: 100vh;
-    max-width: 100vw;
+    background: url("../imagens/fundo-madeira.jpg") top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 main{
     height: 100vh;
     position: relative;
-    background-color: black;
 }
 
-section#celular{
+section#telefone{
     position: absolute;
     top: 50%;
-    bottom: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
-    height: 500px;
-    background-color: burlywood;
+    width: 311px;
+    height: 627px;
+    background: url("../imagens/frame-iphone.png");
+    background-repeat: no-repeat;
 }
